--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -13,7 +13,8 @@ jobs:
       contents: read
       id-token: write
     with:
-      subcommand: instances describe gh-ubuntu-22 --zone=${{ vars.ZONE }}
+      zone_param: zone
+      subcommand: instances describe ${{ vars.INSTANCE }}
 
   backup:
     name: backup instance
@@ -24,8 +25,8 @@ jobs:
       contents: read
       id-token: write
     with:
-      subcommand: machine-images create gh-ubuntu-22-r${{ github.run_number }}
-        --source-instance=gh-ubuntu-22
-        --source-instance-zone=${{ vars.ZONE }}
-        --storage-location=${{ vars.LOCATION }}
-        --description="GitHub Runner on Ubuntu 22.04 LTS"
+      location_param: storage-location
+      zone_param: source-instance-zone
+      subcommand: machine-images create ${{ vars.INSTANCE }}-r${{ github.run_number }}
+        --source-instance=${{ vars.INSTANCE }}
+        --description="GitHub Runner on ${{ vars.SYSTEM_DESCRIPTION }}"
