fix(backup): use correct backup job reference in verify job

--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -45,7 +45,7 @@ jobs:
         if: fromJSON(needs.backup.outputs.result).status != 'READY'
         uses: actions/github-script@v6.4.1
         with:
-          script: core.setFailed("backup completed with unexpected status ${{ fromJSON(needs.check.outputs.result).status }}")
+          script: core.setFailed("backup completed with unexpected status ${{ fromJSON(needs.backup.outputs.result).status }}")
       - name: check backup size
         uses: actions/github-script@v6.4.1
         with:
