fix(create): use different filter paraphrasing in check-backup job

--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -27,8 +27,8 @@ jobs:
     with:
       subcommand: machine-images list
         --limit=1
-        --sort-by=~NAME
-        --filter="name:${{ vars.INSTANCE }}-r*"
+        --sort-by=~name
+        --filter='name:${{ vars.INSTANCE }}-r*'
 
   create:
     name: create instance
