fix(create): use filter without name field selector
While the name field selector works locally, it fails on the server side, using client_filter instead of server_filter.

--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -28,7 +28,7 @@ jobs:
       subcommand: machine-images list
         --limit=1
         --sort-by=~name
-        --filter='name:${{ vars.INSTANCE }}-r*'
+        --filter=${{ vars.INSTANCE }}-r
 
   create:
     name: create instance
