chore: migrate all language tool workflows to same concurrency group
Also disable their secondary triggers, only accepting workflow dispatches.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -8,7 +8,7 @@ on:
         description: identity of the runner label and codeQL language
         type: string
 
-concurrency: github-${{ inputs.language }}
+concurrency: github
 
 jobs:
   clear:
