--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,13 +1,8 @@
-name: golang tool cache
+name: go tool cache
 
-on:
-  push:
-    branches: [main]
-    paths:
-      - '.github/workflows/golang.yml'
-  workflow_dispatch:
-  schedule:
-    - cron: '5 8 * * *'
+on: workflow_dispatch
+
+concurrency: github
 
 jobs:
   prepare:
@@ -18,27 +13,30 @@ jobs:
       language: go
 
   update:
-    name: update golang ${{ matrix.golang-version }}
+    name: update go ${{ matrix.go-version }}
     needs: prepare
     environment: provider
     permissions:
       actions: read
       contents: read
       security-events: write
-    runs-on: [self-hosted, provider]
+    runs-on:
+      - self-hosted
+      - provider
+      - go
     defaults:
       run:
         shell: bash
     strategy:
       matrix:
-        golang-version: ${{ fromJson(needs.prepare.outputs.versions) }}
+        go-version: ${{ fromJson(needs.prepare.outputs.versions) }}
     steps:
       - name: check out repository
         uses: actions/checkout@v3.5.3
-      - name: setting up golang ${{ matrix.golang-version }}
+      - name: setting up go ${{ matrix.go-version }}
         uses: actions/setup-go@v4.0.1
         with:
-          go-version: ${{ matrix.golang-version }}
+          go-version: ${{ matrix.go-version }}
           check-latest: true
       - name: initialize CodeQL
         uses: github/codeql-action/init@v2.21.2
