--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,9 +2,8 @@ name: schedule
 
 on:
   push:
-    branches: [ main ]
-    paths:
-      - '.github/workflows/schedule.yml'
+    branches:
+      - main
   schedule:
     - cron: '0 7 * * *'
   workflow_dispatch:
