--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -19,8 +19,32 @@ on:
 concurrency: scheduler
 
 jobs:
+  check:
+    name: check conditions
+    permissions:
+      contents: none
+    runs-on: ubuntu-latest
+    outputs:
+      workflows: ${{ fromJson(steps.filtered.outputs.json).selected }}
+    if: github.event_name != 'workflow_run' || github.event.workflow_run.conclusion == 'success'
+    steps:
+      - name: set up graph
+        id: graph
+        uses: nickofthyme/object-remap@v2.0.0
+        with:
+          none: [create]
+          create: [maintain]
+          maintain: [backup]
+          backup: [delete]
+      - name: filter graph
+        id: filtered
+        uses: nickofthyme/object-filter@v2.0.0
+        with:
+          selected: ${{ fromJson(steps.graph.outputs.json)[github.event_name != 'workflow_run' && 'none' || github.event.workflow_run.workflow.name] }}
+
   invoke:
     name: invoke ${{ matrix.graphs.workflow }}
+    needs: check
     permissions:
       actions: write
     defaults:
@@ -28,18 +52,11 @@ jobs:
         shell: bash
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 3
-      fail-fast: false
       matrix:
-        graphs: [
-          { trigger: "none", workflow: "create" },
-          { trigger: "create", workflow: "maintain" },
-          { trigger: "maintain", workflow: "backup" },
-          { trigger: "backup", workflow: "delete" }
-        ]
-    if: (github.event_name != 'workflow_run' || github.event.workflow_run.conclusion == 'success') && (github.event_name != 'workflow_run' && matrix.graphs.trigger == 'none' || contains(github.event.workflow_run.workflow.path, matrix.graphs.trigger))
+        workflow: ${{ fromJson(needs.check.outputs.workflows) }}
     steps:
       - name: dispatch ${{ matrix.graphs.workflow }} workflow
         uses: benc-uk/workflow-dispatch@v1.2.2
         with:
           workflow: ${{ matrix.graphs.workflow }}.yml
+          ref: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.ref || github.ref }}
