feat: trigger workflow_run only from main branch

--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -8,6 +8,8 @@ on:
     - cron: '0 7 * * *'
   workflow_dispatch:
   workflow_run:
+    branches:
+      - main
     workflows:
       - create
       - maintain
