--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -43,7 +43,7 @@ jobs:
         id: filtered
         uses: nickofthyme/object-remap@v2.0.0
         with:
-          workflow: ${{ toJson(fromJson(steps.graph.outputs.json)[github.event_name != 'workflow_run' && 'none' || github.event.workflow_run.workflow.name]) }}
+          workflow: ${{ toJson(fromJson(steps.graph.outputs.json)[github.event_name != 'workflow_run' && 'none' || github.event.workflow_run.name]) }}
 
   invoke:
     name: invoke ${{ matrix.workflow }}
