--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -62,4 +62,4 @@ jobs:
         uses: benc-uk/workflow-dispatch@v1.2.2
         with:
           workflow: ${{ matrix.workflow }}.yml
-          #ref: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.ref || github.ref }}
+          ref: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.ref || github.sha }}
