--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -8,13 +8,11 @@ on:
     - cron: '0 7 * * *'
   workflow_dispatch:
   workflow_run:
-    branches:
-      - main
     workflows:
-      - create
-      - maintain
-      - backup
-      - delete
+      - "create"
+      - "maintain"
+      - "backup"
+      - "delete"
 
 concurrency: scheduler
 
