--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -8,11 +8,7 @@ on:
     - cron: '0 7 * * *'
   workflow_dispatch:
   workflow_run:
-    workflows:
-      - "create"
-      - "maintain"
-      - "backup"
-      - "delete"
+    workflows: [create]
 
 concurrency: scheduler
 
