--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,7 +138,7 @@ jobs:
         type: string
     executor:
       name: gcp-cli/google
-      version: << parameters.gcloud-cli-version >>
+      sdk-version: << parameters.gcloud-cli-version >>
     steps:
       - gcp-cli/setup:
           version: << parameters.gcloud-cli-version >>
