fix: use alpine variant of gcloud sdk image
This contains the missing wget for circleci/jq orb

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,7 +138,7 @@ jobs:
         type: string
     executor:
       name: gcp-cli/google
-      sdk-version: << parameters.gcloud-cli-version >>
+      sdk-version: << parameters.gcloud-cli-version >>-alpine
     steps:
       - gcp-cli/setup:
           version: << parameters.gcloud-cli-version >>
